--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-loader-spinner": "^5.3.4",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.14.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
